--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-bottom: 24px;
+  padding: 20px;
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -9,6 +10,7 @@
     align-items: center;
     padding: 0 36px 40px 36px;
     margin: 0;
+    background: linear-gradient(0deg, $basic-grey2 430px, transparent 81px);
   }
 }
 
@@ -16,7 +18,7 @@
   @media (min-width: $tablet-width) {
     width: 168px;
     height: 200px;
-    margin-bottom: 34px;
+    margin-bottom: 36px;
   }
 }
 
@@ -32,6 +34,7 @@
   grid-row: 1/2;
   grid-column-start: 2;
   grid-column-end: 3;
+  width: 80px;
 
   @media (min-width: $tablet-width) {
     text-align: center;
@@ -43,7 +46,7 @@
   margin: 0;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 21px;
+    margin-bottom: 23px;
   }
 }
 
@@ -85,4 +88,11 @@
 
 .product__cell--data {
   text-align: end;
+}
+
+.product__row {
+  @media (min-width: $tablet-width) {
+    border-bottom: 1px solid $special-light-grey3;
+    padding-bottom: 9px;
+  }
 }
