--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -1,11 +1,18 @@
 .products {
   list-style: none;
   padding: 0;
+  margin: 0;
 
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    row-gap: 60px;
+    column-gap: 80px;
   }
 }
 
